# csi-kafka

./: .travis.yml  CMakeLists.txt  README.md  build_cross_raspbian.sh  build_linux.sh  build_linux_all.sh  build_win64_vc12_all.bat  rebuild_alpine.sh  rebuild_linux.sh  rebuild_macos.sh  rebuild_win64_vc12.bat  rebuild_win64_vc14.bat  travis.sh
csi_kafka/: CMakeLists.txt  async_lowlevel_producer.cpp  async_lowlevel_producer.h  avro_decoder.h  avro_highlevel_producer.h  avro_lowlevel_producer.h  consumer.cpp  consumer.h  consumer_coordinator.cpp  consumer_coordinator.h  decoder.cpp  decoder.h  encoder.cpp  high_level_consumer.cpp  high_level_consumer.h  high_level_producer.cpp  high_level_producer.h  highlevel_consumer.cpp  highlevel_consumer.h  highlevel_producer.cpp  highlevel_producer.h  kafka.cpp  kafka.h  kafka_error_code.cpp  kafka_error_code.h  lowlevel_client.cpp  lowlevel_client.h  lowlevel_consumer.cpp  lowlevel_consumer.h  lowlevel_consumer_group_client.cpp  lowlevel_consumer_group_client.h  lowlevel_producer.cpp  lowlevel_producer.h  producer.cpp  producer.h  protocol_decoder.cpp  protocol_decoder.h  protocol_encoder.cpp  protocol_encoder.h
csi_kafka/avro/: avro_consumer.h  avro_high_level_producer.h  avro_producer.h  decoder.h
csi_kafka/internal/: async.h  async_metadata_client.cpp  async_metadata_client.h  call_context.h  spinlock.cpp  spinlock.h  utility.h
csi_kafka/low_level/: client.cpp  client.h  consumer.cpp  consumer.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  producer.cpp  producer.h  spinlock.cpp  spinlock.h  utility.h
examples/: CMakeLists.txt
examples/avro_fixed_schema_highlevel_consumer_sample/: CMakeLists.txt  avro_fixed_schema_highlevel_consumer_sample.cpp
examples/avro_fixed_schema_highlevel_producer_sample/: CMakeLists.txt  avro_fixed_schema_highlevel_producer_sample.cpp  contact_info.h  contact_info_key.h
examples/avro_generic_schema_highlevel_consumer_sample/: CMakeLists.txt  avro_generic_schema_highlevel_consumer_sample.cpp
examples/basic_sample/: CMakeLists.txt  basic_sample.cpp
examples/consumer_offset_sample/: CMakeLists.txt  README.txt  consumer_offset_sample.cpp
examples/csi_kafka_avro_consumer_sample/: CMakeLists.txt  csi_kafka_avro_consumer_sample.cpp
examples/csi_kafka_avro_kv_consumer_sample/: CMakeLists.txt  contact_info.h  contact_info.json  csi_kafka_avro_kv_consumer_sample.cpp
examples/csi_kafka_avro_kv_producer_sample/: CMakeLists.txt  avro_get.bat  contact_info_key.h  csi_kafka_avro_kv_producer_sample.cpp
examples/csi_kafka_avro_producer_sample/: CMakeLists.txt  csi_kafka_avro_producer_sample.cpp  syslog.h
examples/csi_kafka_consumer_offset_checker/: CMakeLists.txt  csi_kafka_consumer_offset_checker.cpp
examples/csi_kafka_raw_avro_consumer_sample/: CMakeLists.txt  avro_get.bat  contact_info_key.h
examples/csi_kafka_raw_avro_producer_sample/: contact_info_key.json  csi_kafka_avro_kv_producer_sample.cpp
examples/csi_kafka_sample1/: CMakeLists.txt  csi_kafka_sample1.cpp
examples/csi_kafka_sample2/: CMakeLists.txt  csi_kafka_sample2.cpp
examples/fixed_rate_producer/: CMakeLists.txt  fixed_rate_producer.cpp
examples/highlevel_consumer_sample/: CMakeLists.txt  highlevel_consumer_sample.cpp
examples/highlevel_producer_sample/: CMakeLists.txt  highlevel_producer_sample.cpp
examples/lowlevel_producer_sample/: CMakeLists.txt  lowlevel_producer_sample.cpp
examples/lowlevel_sample/: CMakeLists.txt
examples/mirror_maker_sample/: CMakeLists.txt  mirror_maker_sample.cpp
examples/offset_commit_sample/: CMakeLists.txt  offset_commit_sample.cpp
examples/schema-registry/: CMakeLists.txt  README.txt  gen_avro.bat  schema-registry.cpp
examples/schema-registry/avro/: schema_registry_get_subjects_response_t.h  schema_registry_get_subjects_response_t.json  schema_registry_post_subjects_request_t.h  schema_registry_post_subjects_request_t.json  schema_registry_post_subjects_response_t.h  schema_registry_post_subjects_response_t.json
tests/: CMakeLists.txt
tests/async/: CMakeLists.txt  async.cpp
tests/test_metadata_client/: CMakeLists.txt  test_metadata_client.cpp
