project(avro_fixed_schema_highlevel_consumer_sample)

SET(SRCS
contact_info.h
contact_info_key.h
avro_fixed_schema_highlevel_consumer_sample.cpp
)

add_executable(avro_fixed_schema_highlevel_consumer_sample ${SRCS})
target_link_libraries(avro_fixed_schema_highlevel_consumer_sample ${CSI_KAFKA_LIBS})
