project(avro_fixed_schema_highlevel_producer_sample)

SET(SRCS
avro_fixed_schema_highlevel_producer_sample.cpp
contact_info.h
contact_info_key.h
)

add_executable(avro_fixed_schema_highlevel_producer_sample ${SRCS})
target_link_libraries(avro_fixed_schema_highlevel_producer_sample ${CSI_KAFKA_LIBS})
